--- a/server/view/member/partial/header.ejs
+++ b/server/view/member/partial/header.ejs
@@ -6,32 +6,39 @@
   div, p {
     /* border: 1px dashed; */
   }
+
   header {
     padding-top: 2vh;
   }
+
   .header-logo {
     height: 11vh;
     max-height: 100%;
     width: auto;
   }
+
   .noti-div, .user-div {
     padding-bottom: 1.5vh;
   }
+
   .bell-svg {
     height: 5.8vh;
     max-height: 100%;
     width: auto;
     padding-bottom: 0.2vh;
   }
+
   .user-svg {
     height: 6vh;
     max-height: 100%;
     width: auto;
   }
+
   .header-btn {
     border: none;
     background-color: transparent;
   }
+
   .header-block {
     background-color: white;
     position: fixed;
@@ -39,7 +46,6 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 99;
-
   }
 
   .content-block {
@@ -50,22 +56,28 @@
   #noti-ul {
     width: 25vw;
   }
+
   .noti-item:hover {
     cursor: default;
   }
+
   .noti-owner {
     color: #191c5b;
   }
+
   .noti-ff {
     color: #1354a5;
   }
+
   .noti-time {
     font-size:small;
     color: darkgray;
   }
+
   .new-noti {
     background-color: rgb(255, 250, 243);
   }
+
   .badge-notification {
     position: absolute;
     top: 0;
@@ -125,8 +137,8 @@
           <li><button class="dropdown-item" id="logout-btn">Logout</button></li>
         </ul>
       </div>
-
     </div>
+    <!-- right end  -->
   </header>
 </div>
 <!-- Profile Modal -->
