--- a/server/view/member/shared.ejs
+++ b/server/view/member/shared.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shared - EON Drive</title>
-  <%- include('../partials/main_stylesheet') %>
-  <%- include('../partials/main_script') %>
+  <%- include('./partial/stylesheet') %>
+    <%- include('./partial/script') %>
   <!-- css internal -->
   <style>
     /* .d-flex {
@@ -17,12 +17,12 @@
 
 <body>
   <div id="root">
-    <%- include('../partials/main_header') %>
+    <%- include('./partial/header') %>
     <!-- main block start -->
     <div class="container content-block">
       <div class="row">
         <!-- left  -->
-        <%- include('../partials/main_left') %>
+        <%- include('./partial/left') %>
         <!-- right  -->
         <div class="col-11 d-flex flex-column align-items-start">
 
@@ -53,7 +53,7 @@
       </div>
       <!-- main block end -->
     </div>
-    <%- include('../partials/main_footer') %>
+    <%- include('./partial/footer') %>
   </div>
 
 
