--- a/server/view/member/trash.ejs
+++ b/server/view/member/trash.ejs
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Trash - EON Drive</title>
-  <%- include('../partials/main_stylesheet') %>
-    <%- include('../partials/main_script') %>
+  <%- include('./partial/stylesheet') %>
+    <%- include('./partial/script') %>
       <!-- css internal -->
       <style>
         .form-check-input {
@@ -63,12 +63,12 @@
 
 <body>
   <div id="root">
-    <%- include('../partials/main_header') %>
+    <%- include('./partial/header') %>
       <!-- main block start -->
       <div class="container content-block">
         <div class="row">
           <!-- left  -->
-          <%- include('../partials/main_left') %>
+          <%- include('./partial/left') %>
             <!-- right  -->
             <div class="col-11 d-flex flex-column align-items-start">
               <div class="d-flex align-items-center justify-content-md-between my-2" style="width: 100%;">
@@ -153,7 +153,7 @@
         <!-- Modal for confirm delete end  -->
         <!-- main block end -->
       </div>
-      <%- include('../partials/main_footer') %>
+      <%- include('./partial/footer') %>
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
