--- a/server/view/visitor/index.ejs
+++ b/server/view/visitor/index.ejs
@@ -13,10 +13,6 @@
       font-family: 'Lato', sans-serif !important;
     }
 
-    /* div {
-      border: 1px dashed;
-    } */
-
     #main-block {
       display: flex;
     }
@@ -25,7 +21,7 @@
       margin-left: 14vw;
     }
 
-    img {
+    #index-img {
       padding-top: 12vh;
       width: 35vw;
       max-width: 100%;
@@ -92,7 +88,7 @@
   <div id="root">
     <div id="main-block">
       <div id="img-block">
-        <img src="/img/index.png">
+        <img id="index-img" src="/img/index.png">
       </div>
       <div id="title-block">
         <h1 id="title">EON Drive</h1>
