--- a/server/view/visitor/partial/footer.ejs
+++ b/server/view/visitor/partial/footer.ejs
@@ -1,5 +1,9 @@
 <style>
   .footer-block {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: white;
     color: rgb(141, 141, 141);
   }
