[chore] rename FE programs & move components out of one page

--- a/server/view/member/history.ejs
+++ b/server/view/member/history.ejs
@@ -122,8 +122,8 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/js/pages/main/header.js"></script>
-  <script type="module" src="/js/pages/main/history.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
+  <script type="module" src="/js/pages/member/history.js"></script>
   <script>
     $(document).ready(function ()
     {
