--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -485,8 +485,13 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/js/pages/main/header.js"></script>
-  <script type="module" src="/js/pages/main/home.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
+  <script type="module" src="/js/pages/member/home.js"></script>
+  <script type="module" src="/js/pages/member/component/home_download.js"></script>
+  <script type="module" src="/js/pages/member/component/home_delete.js"></script>
+  <script type="module" src="/js/pages/member/component/home_upload.js"></script>
+  <script type="module" src="/js/pages/member/component/home_createfolder.js"></script>
+  <script type="module" src="/js/pages/member/component/home_mnglink.js"></script>
   <script>
     $(document).ready(function ()
     {
