--- a/server/view/member/links.ejs
+++ b/server/view/member/links.ejs
@@ -113,8 +113,8 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/js/pages/main/header.js"></script>
-  <script type="module" src="/js/pages/main/links.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
+  <script type="module" src="/js/pages/member/links.js"></script>
   <script>
     $(document).ready(function ()
     {
