--- a/server/view/member/shared.ejs
+++ b/server/view/member/shared.ejs
@@ -58,8 +58,8 @@
 
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/js/pages/main/header.js"></script>
-  <script type="module" src="/js/pages/main/shared.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
+  <script type="module" src="/js/pages/member/shared.js"></script>
   <script>
     $(document).ready(function ()
     {
