--- a/server/view/member/trash.ejs
+++ b/server/view/member/trash.ejs
@@ -157,8 +157,8 @@
   </div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="/js/pages/main/header.js"></script>
-  <script type="module" src="/js/pages/main/trash.js"></script>
+  <script type="module" src="/js/pages/member/header.js"></script>
+  <script type="module" src="/js/pages/member/trash.js"></script>
   <script>
     $(document).ready(function ()
     {
