--- a/server/view/visitor/login.ejs
+++ b/server/view/visitor/login.ejs
@@ -178,6 +178,6 @@
     <!-- footer  -->
     <%- include('./partial/footer') %>
 </body>
-<script type="module" src="/js/pages/view/login.js"></script>
+<script type="module" src="/js/pages/visitor/login.js"></script>
 
 </html>
