--- a/server/view/visitor/register.ejs
+++ b/server/view/visitor/register.ejs
@@ -201,6 +201,6 @@
     <!-- footer  -->
     <%- include('./partial/footer') %>
 </body>
-<script type="module" src="/js/pages/view/register.js"></script>
+<script type="module" src="/js/pages/visitor/register.js"></script>
 
 </html>
