[chore] add notes or remove comment

--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -452,6 +452,8 @@
                             </svg>
                           </span>
                         </div>
+                        <!-- TODO: to be added when uploading error  -->
+                        <div id="waiting-error"></div>
                       </div>
                     </div>
                   </div>
