[feat] add error handling for links you shared page

--- a/server/view/member/links.ejs
+++ b/server/view/member/links.ejs
@@ -12,6 +12,7 @@
         .d-flex {
           /* border: 1px dashed; */
         }
+
         .user-email {
           font-size: smaller;
           color: rgb(86, 86, 86);
@@ -89,20 +90,15 @@
         </div>
         <!-- Modal for revoke link end  -->
         <!-- Modal for revoke link alert  -->
-        <div class="modal fade" id="revokeAlertModal" tabindex="-1" aria-labelledby="revokeAlertModalLabel"
-          aria-hidden="true">
+        <div class="modal fade" id="revokeAlertModal" tabindex="-1" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
-              <!-- <div class="modal-header">
-                    <h5 class="modal-title" id="revokeAlertModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div> -->
-              <div class="modal-body my-3">
-                Your link has been revoked.
+              <div class="modal-body my-3" id="revoke-alert-msg">
+                <!-- Your link has been revoked. -->
               </div>
-              <div class="modal-footer">
+              <!-- <div class="modal-footer">
                 <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
