[feat] add error response for trash page & delete function in home page

--- a/server/view/member/trash.ejs
+++ b/server/view/member/trash.ejs
@@ -151,6 +151,17 @@
           </div>
         </div>
         <!-- Modal for confirm delete end  -->
+        <!-- Modal for reminder  -->
+        <div class="modal fade" id="errorModal" tabindex="-1" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div id="error-msg" class="text-wrap"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Modal for reminder end  -->
         <!-- main block end -->
       </div>
       <%- include('./partial/footer') %>
