--- a/server/view/member/partial/footer.ejs
+++ b/server/view/member/partial/footer.ejs
@@ -25,6 +25,7 @@
 <div class="container w-100 footer-block">
   <footer class="d-flex flex-wrap justify-content-between align-items-center">
     <ul class="nav justify-content-end">
+      <li class="nav-item"><a href="/about" class="nav-link px-2">About</a></li>
       <li class="nav-item"><a href="/info" class="nav-link px-2">Terms and Conditions</a></li>
       <li class="nav-item"><a href="/info#privacy" class="nav-link px-2">Privacy Policy</a></li>
       <li class="nav-item"><a href="/info#contact" class="nav-link px-2">Contact</a></li>
