[feat] update usage progress bar in FE / make contents center aligned in table in FE

--- a/server/view/member/home.ejs
+++ b/server/view/member/home.ejs
@@ -13,7 +13,7 @@
         div {
           /* border: 1px dashed; */
         }
-
+        
         #drag-drop-box {
           font-size: 1.5vw;
           border: 2px dashed lightgrey;
@@ -38,6 +38,10 @@
         .slash {
           padding: 0 6px 3px;
           font-size: larger;
+        }
+
+        table.dataTable tbody td {
+          vertical-align: middle;
         }
 
         .form-check-input {
@@ -88,14 +92,6 @@
           background-color: #519cf6;
           width: 50%;
           transition: width 0.5s ease-in-out;
-        }
-
-        .upload-progress {
-          background-color: #1968df;
-        }
-
-        .upload-progress-container {
-          margin: 0 0 1vh 0;
         }
 
         .email-container {
