--- a/server/view/member/trash.ejs
+++ b/server/view/member/trash.ejs
@@ -12,6 +12,12 @@
         .form-check-input {
           border-color: darkgray;
         }
+        div {
+          /* border: 1px dashed; */
+        }
+        table.dataTable tbody td {
+          vertical-align: middle;
+        }
 
         .custom-operation-btn {
           background-color: #f8f5ef;
@@ -57,6 +63,10 @@
           white-space: normal;
           word-break: break-word;
           font-size: large;
+        }
+        .delete-parent-path {
+          font-size: smaller;
+          color: gray;
         }
       </style>
 </head>
